# SWE-Manger

Initial analysis/: 0_df_with_GH_labels.csv
Initial analysis/RQ1/: 0_df_with_topics.csv  1_df_with_all_clusters.csv  2_df_with_all_clusters_and_patch_features.csv  3_df_with_all_clusters_and_patch_features_and_test_metadata.csv  4_df_with_all_clusters_and_patch_features_and_test_metadata_and_test_patch.csv  EECS6444_assign.ipynb
Initial analysis/RQ1/Analysis/: cluster_summary_numeric.csv  final_df_cleaned.csv  final_df_cleaned_v2.csv
Initial analysis/RQ2/: RQ2.ipynb
Project/RQ1/Datasets/: df_v1.csv  df_v2.csv  df_v3.csv  df_v4.csv  df_v5.csv  df_v6.csv  df_v7.csv  df_v9.csv
SWE-Manager/: pyproject.toml
SWE-Manager/swe_manager/: agent_selector.py
SWE-Manager/swe_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
